--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "proxy": "http://localhost:3001",
-  "name": "public",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
