--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "react-bootstrap": "^2.4.0"
+    "react-bootstrap": "^2.4.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0"
   }
 }
