--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "bootstrap": "^5.1.3",
     "react-bootstrap": "^2.4.0",
     "react-icons": "^4.4.0",
