--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.1.3",
     "emailjs": "^4.0.0",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^6.3.16",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
