changed background color on cards, adding padding between buttons, added margin in the form on the contact to provide even spacing

--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "@fontsource/bodoni-moda": "^4.5.6",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
