--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/thenickgarza/react-portfolio",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@fontsource/bodoni-moda": "^4.5.6",
@@ -22,13 +23,16 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
