--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "react-bootstrap": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
