fixed the couldnt find index.html problem

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "reactportfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/thenickgarza/react-portfolio",
