--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactportfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/thenickgarza/react-portfolio",
+  "homepage": "https://localhost:3000",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@fontsource/bodoni-moda": "^4.5.6",
@@ -20,6 +20,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
