--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactportfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://thenickgarza.github.io/react-portfolio",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@fontsource/bodoni-moda": "^4.5.6",
