forgot the homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "reactportfolio",
+  "homepage": "http://thenickgarza.github.io/react-portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
